syntax = "proto3";

package raftpb;

// RequestVote RPC
message RequestVoteArgs {
    // Your data here (2A, 2B).
    uint64 term = 1;
    uint64 candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteReply {
    // Your data here (2A).
    uint64 term = 1;
    bool voteGranted = 2;
}

// AppendEntries RPC
message AppendEntriesArgs {
    uint64 term = 1;
    uint64 leaderId = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated bytes entries = 5;
    repeated uint64 entries_term = 6;
    uint64 leaderCommit = 7;
}

message AppendEntriesReply {
    uint64 term = 1;
    bool success = 2;
    uint64 me = 3;
}
